tests/negative/gold/invalid_definition_test.gold
tests/negative/invalid_definition_test.toit:24:18: error: Definition of variable not allowed at this location
  return x + x x := 499
                 ^~
tests/negative/invalid_definition_test.toit:24:12: error: Can't call result of evaluating expression
  return x + x x := 499
           ^
tests/negative/invalid_definition_test.toit:24:10: error: Unresolved identifier: 'x'
  return x + x x := 499
         ^
tests/negative/invalid_definition_test.toit:24:14: error: Unresolved identifier: 'x'
  return x + x x := 499
             ^
tests/negative/invalid_definition_test.toit:28:11: error: Definition of variable not allowed at this location
    foo x := 499
          ^~
tests/negative/invalid_definition_test.toit:30:11: error: Definition of variable not allowed at this location
    foo x := 499
          ^~
tests/negative/invalid_definition_test.toit:34:11: error: Definition of variable not allowed at this location
    foo y := 499
          ^~
tests/negative/invalid_definition_test.toit:38:11: error: Definition of variable not allowed at this location
    foo x := 499
          ^~
tests/negative/invalid_definition_test.toit:39:10: error: Definition of variable not allowed at this location
  y := x := 42 ? true : false
         ^~
tests/negative/invalid_definition_test.toit:40:18: error: Definition of variable not allowed at this location
  y2 := true ? z := 42 : false
                 ^~
tests/negative/invalid_definition_test.toit:41:26: error: Definition of variable not allowed at this location
  y3 := true ? true : zz := 42
                         ^~
tests/negative/invalid_definition_test.toit:43:9: error: Definition of variable not allowed at this location
  not x := 499
        ^~
tests/negative/invalid_definition_test.toit:45:6: error: Definition of variable not allowed at this location
  (x := 499)
     ^~
tests/negative/invalid_definition_test.toit:10:14: error: Definition of variable not allowed at this location
  field := x := 499
             ^~
tests/negative/invalid_definition_test.toit:13:11: error: Definition of variable not allowed at this location
    foo x := 499
          ^~
tests/negative/invalid_definition_test.toit:14:11: error: Definition of variable not allowed at this location
    foo y ::= 499
          ^~~
tests/negative/invalid_definition_test.toit:17:11: error: Definition of variable not allowed at this location
    foo x := 499
          ^~
tests/negative/invalid_definition_test.toit:18:11: error: Definition of variable not allowed at this location
    foo y ::= 499
          ^~~
tests/negative/invalid_definition_test.toit:21:11: error: Definition of variable not allowed at this location
    foo x := 499
          ^~
tests/negative/invalid_definition_test.toit:7:13: error: Definition of variable not allowed at this location
global := x := 499
            ^~
tests/negative/invalid_definition_test.toit:39:16: warning: Condition always evaluates to true
  y := x := 42 ? true : false
               ^
Compilation failed.
